# dth

./: .gitignore  README.md
dependent-regexp/: ChangeLog.md  README.md  RegexpExample.hs  dependent-regexp.cabal
dependent-regexp/src/: OccDict.hs  Regexp.hs  RegexpDependent.hs  RegexpParser.hs  RegexpTest.hs
depending-on-types/: Okasaki.hs  Ordering.agda  RBT.hs  README.md  SimpleRBT.hs  depending-on-types.pptx
examples/: WhyDependentTypesMatter.hs  complete-trees.hs  order.hs
examples/dep-typed-wbl-heaps/: LICENSE  README.md  dep-typed-heaps-hs.cabal
examples/dep-typed-wbl-heaps/src/: Basics.hs
examples/dep-typed-wbl-heaps/src/Basics/: Bool.hs  Nat.hs  Ordering.hs  Reasoning.hs  Sing.hs  Unreachable.hs
examples/dep-typed-wbl-heaps/src/SinglePassMerge/: CombinedProofs.hs  NoProofs.hs  PriorityProof.hs  RankProof.hs
examples/dep-typed-wbl-heaps/src/TwoPassMerge/: CombinedProofs.hs  NoProofs.hs  PriorityProof.hs  RankProof.hs
examples/dynamic/: DataDynamic.hs  DataTypeable.hs  DynLang.hs
examples/instant-insanity/: insanity-tf.lhs  instant-insanity.lhs
examples/perfect-trees/: ConstraintTF.hs  SingletonTF.lhs  finally-tagless.hs  gadt.hs  nested.hs  singleton-class.hs  singleton-tf.hs
examples/red-black/: MightRedBlack.hs  MightRedBlackGADT.hs  RedBlack.lhs  RedBlackGADT.lhs  Set.lhs
examples/treap/: TreeTests.hs  treap.hs  treap2.hs
examples/zipwith/: README.md  ctf.hs  gadt.hs  (+1 more)
icfp14/: Okasaki.hs  RBT.agda  RBT.hs  SimpleRBT.hs
nested-datatypes/: DFinger.lhs  Finger.lhs  Main.hs  Nat.lhs  Nested.lhs  Peano.lhs  Scoped.lhs  Some.lhs  SubstScoped.lhs  harry-notes.md  nested-datatypes.cabal
popl17/: LICENSE  POPL17.pptx  README.md  Regexp.hs  RegexpDependent.hs  RegexpExample.hs  RegexpOcc.hs  RegexpParser.hs  RegexpQuick.hs  RegexpSet.hs  RegexpTest.hs  dependent-regexp.cabal  regexp-occ.hs  regexp-set.hs  regexp.hs  regexp2.hs  regexp3.hs  tmap.hs
regexp/: ChangeLog.md  Example.hs  README.md  dependent-regexp.cabal  stack.yaml
talks/: depending-on-types.pptx
vector-bingo/: LICENSE  Vector.lhs  vector-bingo.cabal
(+11 files in other folders)
